# geosparql-benchmark-dggs

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.old  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  queries.sparql  readme.md
conversion/: geosparql_benchmark_conversion.py
jena-build-run-query-scripts/: build_jena.sh  query_jena.sh  run_jena.sh
output/: dataset_dffs.rdf  dataset_dffs.ttl  dataset_dggs_level_10.rdf  dataset_dggs_level_10.ttl  dataset_dggs_level_7.rdf  dataset_dggs_level_7.ttl
